tests/ui/spirv-attr/multiple.stderr
error: only one intrinsic type attribute is allowed on a struct
 --> $DIR/multiple.rs:8:18
  |
8 | #[spirv(sampler, sampler)]
  |                  ^^^^^^^
  |
note: previous intrinsic type attribute
 --> $DIR/multiple.rs:8:9
  |
8 | #[spirv(sampler, sampler)]
  |         ^^^^^^^

error: only one intrinsic type attribute is allowed on a struct
  --> $DIR/multiple.rs:11:18
   |
11 | #[spirv(sampler, generic_image_type)]
   |                  ^^^^^^^^^^^^^^^^^^
   |
note: previous intrinsic type attribute
  --> $DIR/multiple.rs:11:9
   |
11 | #[spirv(sampler, generic_image_type)]
   |         ^^^^^^^

error: only one #[spirv(block)] attribute is allowed on a struct
  --> $DIR/multiple.rs:14:16
   |
14 | #[spirv(block, block)]
   |                ^^^^^
   |
note: previous #[spirv(block)] attribute
  --> $DIR/multiple.rs:14:9
   |
14 | #[spirv(block, block)]
   |         ^^^^^

warning: #[spirv(block)] is no longer needed and should be removed
  --> $DIR/multiple.rs:14:9
   |
14 | #[spirv(block, block)]
   |         ^^^^^

error: only one entry-point attribute is allowed on a function
  --> $DIR/multiple.rs:17:17
   |
17 | #[spirv(vertex, vertex)]
   |                 ^^^^^^
   |
note: previous entry-point attribute
  --> $DIR/multiple.rs:17:9
   |
17 | #[spirv(vertex, vertex)]
   |         ^^^^^^

error: only one entry-point attribute is allowed on a function
  --> $DIR/multiple.rs:20:17
   |
20 | #[spirv(vertex, fragment)]
   |                 ^^^^^^^^
   |
note: previous entry-point attribute
  --> $DIR/multiple.rs:20:9
   |
20 | #[spirv(vertex, fragment)]
   |         ^^^^^^

error: only one storage class attribute is allowed on a function param
  --> $DIR/multiple.rs:25:22
   |
25 |     #[spirv(uniform, uniform)] _same_storage_class: (),
   |                      ^^^^^^^
   |
note: previous storage class attribute
  --> $DIR/multiple.rs:25:13
   |
25 |     #[spirv(uniform, uniform)] _same_storage_class: (),
   |             ^^^^^^^

error: only one storage class attribute is allowed on a function param
  --> $DIR/multiple.rs:26:22
   |
26 |     #[spirv(uniform, push_constant)] _diff_storage_class: (),
   |                      ^^^^^^^^^^^^^
   |
note: previous storage class attribute
  --> $DIR/multiple.rs:26:13
   |
26 |     #[spirv(uniform, push_constant)] _diff_storage_class: (),
   |             ^^^^^^^

error: only one builtin attribute is allowed on a function param
  --> $DIR/multiple.rs:28:23
   |
28 |     #[spirv(position, position)] _same_builtin: (),
   |                       ^^^^^^^^
   |
note: previous builtin attribute
  --> $DIR/multiple.rs:28:13
   |
28 |     #[spirv(position, position)] _same_builtin: (),
   |             ^^^^^^^^

error: only one builtin attribute is allowed on a function param
  --> $DIR/multiple.rs:29:23
   |
29 |     #[spirv(position, vertex_index)] _diff_builtin: (),
   |                       ^^^^^^^^^^^^
   |
note: previous builtin attribute
  --> $DIR/multiple.rs:29:13
   |
29 |     #[spirv(position, vertex_index)] _diff_builtin: (),
   |             ^^^^^^^^

error: only one #[spirv(descriptor_set)] attribute is allowed on a function param
  --> $DIR/multiple.rs:31:33
   |
31 |     #[spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
   |                                 ^^^^^^^^^^^^^^^^^^
   |
note: previous #[spirv(descriptor_set)] attribute
  --> $DIR/multiple.rs:31:13
   |
31 |     #[spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
   |             ^^^^^^^^^^^^^^^^^^

error: only one #[spirv(descriptor_set)] attribute is allowed on a function param
  --> $DIR/multiple.rs:32:33
   |
32 |     #[spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
   |                                 ^^^^^^^^^^^^^^^^^^
   |
note: previous #[spirv(descriptor_set)] attribute
  --> $DIR/multiple.rs:32:13
   |
32 |     #[spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
   |             ^^^^^^^^^^^^^^^^^^

error: only one #[spirv(binding)] attribute is allowed on a function param
  --> $DIR/multiple.rs:34:26
   |
34 |     #[spirv(binding = 0, binding = 0)] _same_binding: (),
   |                          ^^^^^^^^^^^
   |
note: previous #[spirv(binding)] attribute
  --> $DIR/multiple.rs:34:13
   |
34 |     #[spirv(binding = 0, binding = 0)] _same_binding: (),
   |             ^^^^^^^^^^^

error: only one #[spirv(binding)] attribute is allowed on a function param
  --> $DIR/multiple.rs:35:26
   |
35 |     #[spirv(binding = 0, binding = 1)] _diff_binding: (),
   |                          ^^^^^^^^^^^
   |
note: previous #[spirv(binding)] attribute
  --> $DIR/multiple.rs:35:13
   |
35 |     #[spirv(binding = 0, binding = 1)] _diff_binding: (),
   |             ^^^^^^^^^^^

error: only one #[spirv(flat)] attribute is allowed on a function param
  --> $DIR/multiple.rs:37:19
   |
37 |     #[spirv(flat, flat)] _flat: (),
   |                   ^^^^
   |
note: previous #[spirv(flat)] attribute
  --> $DIR/multiple.rs:37:13
   |
37 |     #[spirv(flat, flat)] _flat: (),
   |             ^^^^

error: only one #[spirv(invariant)] attribute is allowed on a function param
  --> $DIR/multiple.rs:39:24
   |
39 |     #[spirv(invariant, invariant)] _invariant: (),
   |                        ^^^^^^^^^
   |
note: previous #[spirv(invariant)] attribute
  --> $DIR/multiple.rs:39:13
   |
39 |     #[spirv(invariant, invariant)] _invariant: (),
   |             ^^^^^^^^^

error: only one #[spirv(unroll_loops)] attribute is allowed on a function
  --> $DIR/multiple.rs:43:23
   |
43 | #[spirv(unroll_loops, unroll_loops)]
   |                       ^^^^^^^^^^^^
   |
note: previous #[spirv(unroll_loops)] attribute
  --> $DIR/multiple.rs:43:9
   |
43 | #[spirv(unroll_loops, unroll_loops)]
   |         ^^^^^^^^^^^^

error: aborting due to 16 previous errors; 1 warning emitted

